--- a/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
+++ b/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
@@ -1,9 +1,11 @@
-; @package		Joomla
+﻿; @package		Joomla
 ; @copyright	Copyright (C) 2005 - 2014 Open Source Matters, Inc. All rights reserved.
 ; @subpackage	plg_cntools_imageresizer
 ; @copyright	Copyright (c) 2014 Clemens Neubauer. All Rights Reserved.
 ; @license		GNU General Public License
 
+PLG_CNTOLS_IMAGERESIZER_BASIC_LABEL="Basis-Einstellungen"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK="Wasserzeichen"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE="Grössenänderung"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE_HELP="Sie müssen zwischen zwei Arten von Größenänderung wählen. Standardmäßig wird Ihr Bild mit einem Prozentsatz des Originalbildes in der Größe verändert. Sie haben aber auch die Möglichkeit der Wahl für fixe Abmessungen."
 PLG_CNTOOLS_IMAGERESIZER_PERCENT_OPTION="Prozent"
@@ -14,15 +16,70 @@ PLG_CNTOOLS_IMAGERESIZER_WIDTH="Breite(px)"
 PLG_CNTOOLS_IMAGERESIZER_WIDTH_HELP="Neue Breite für die Bildgrößenänderung."
 PLG_CNTOOLS_IMAGERESIZER_HEIGHT="Höhe(px)"
 PLG_CNTOOLS_IMAGERESIZER_HEIGHT_HELP="Neue Höhe für die Bildgrößenänderung."
+PLG_CNTOOLS_IMAGERESIZER_MAXSIDE_OPTION="Seitenlänge"
+PLG_CNTOOLS_IMAGERESIZER_MAXSIDE="Max. Seitenlänge(px)"
+PLG_CNTOOLS_IMAGERESIZER_MAXSIDE_HELP="Hinterlegen sie die maximale Länge der längeren Bildseite. Die 2. Seite wird aliquote im selben Seitenverhältnis wie das Originalbild errechnet"
+PLG_CNTOOLS_IMAGERESIZER_SCALEUP="Vergrössern?"
+PLG_CNTOOLS_IMAGERESIZER_SCALEUP_HELP="Zu keine Bilder werden vergrössert"
+
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_HELP="Wählen Sie, ob bzw. was als Wasserzeichen genutzt werden soll"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_OPTION="Bild"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_OPTION="Text"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE="Bild"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_HELP="Wählen Sie bitte das gewünschte Bild für das Wasserzeichen. Dateiendung: PNG"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Wasserzeichentext(optional)"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text der über dem Bild ausgegeben wird."
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text welcher als Wasserzeichen genutzt werden soll."
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_INFONOTE_HELP="Um einen datumsabhängigen Wert integrieren zu können, nutzen Sie bitte folgendes Format: {date}....{/date}. Der ermittelte Text wird mit der <a target='_blank' href='http://php.net/manual/de/function.date.php'>date()</a> Funktion umgewandelt. Zusätzlich stehen noch die Möglichkeiten {meta}...{/meta} (<a href='https://docs.joomla.org/JApplication/getCfg#Config_Properties' target='_blank'>Details</a>) als auch {user}...{/user} (<a href='https://docs.joomla.org/Accessing_the_current_user_object#Object_Member_Variables_and_Parameters' target='_blank'>Details</a>) zur Verfügung.<br>Bsp.: (c) {date}Y{/date} - {meta}sitename{/meta} by {user}name{/user}"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE="Schriftgrösse des Wasserzeichens(px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE_HELP="Grösse mit welcher der Wasserzeichentext über das Bild gelegt wird."
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_COLOR="Wasserzeichentextfarbe"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_COLOR_HELP="Wählen Sie hier die Farbe für das Wasserzeichen."
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OPACITY="Wasserzeichen Deckkraft(%)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OPACITY_HELP="Definieren Sie in Prozent die Deckkraft des Wasserzeichens. 0 bedeutet keine Deckkraft, 100 bedeutet maximale Deckkraft."
-PLG_CNTOOLS_IMAGERESIZER_ORIENTATION="Ausrichtung erhalten"
-PLG_CNTOOLS_IMAGERESIZER_ORIENTATION_HELP="Die Ausrichtung (Horizontal/Vertikal) wird ermittelt und das bearbeitete Bild bleibt in der gleichen Ausrichtung"
-PLG_CNTOOLS_IMAGERESIZER_SCALEUP="Vergrössern?"
-PLG_CNTOOLS_IMAGERESIZER_SCALEUP_HELP="Zu keine Bilder werden vergrössert"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE="Schriftart"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_HELP="Wählen Sie die zu nutzende Schriftart"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_ARIAL="Arial"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_CLRN="CLRN"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_VERA="Vera"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTURL="Font URL (optional)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTURL_HELP="Hinterlegen Sie die URL der zu nutzenden Schriftart. Bsp.: http://www.example.tld/fonts/fontname.ttf"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR="Horizontale Ausrichtung"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_HELP="Definieren Sie die Position der horizontalen Ausrichtung"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_LEFT="Links"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_CENTER="Mitte"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_RIGHT="Rechts"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT="Vertikale Ausrichung"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_HELP="Definieren Sie die Position der vertikalen Ausrichtung"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_TOP="Oben"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_CENTER="Mitte"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_BOTTOM="Unten"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR="Horizontaler Offset (px)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR_HELP="Das Wasserzeichen wird die hier hinterlegte Pixelanzahl bei Links bzw. Rechts in Richtung Mitte verschoben"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER="Vertikaler Offset (px)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER_HELP="Das Wasserzeichen wird die hier hinterlegte Pixelanzahl bei Oben bzw. Unten in Richtung Mitte verschoben"
+
+PLG_CNTOOLS_IMAGERESIZER_FILENAME="Dateiname"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT="Dateinamen verschlüsseln"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_HELP="Wählen Sie die Verschlüsselungsmethode aus, welche genutzt werden soll"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_UNIQID="Zufallszahl"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_MD5="MD5"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_SHA1="SHA1"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_ROT13="ROT13"
+PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_ONLYPREFIX="Nur Präfix"
+PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF="Präfix (Anfang)"
+PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF_HELP="Hinterlegen Sie den am Anfang zu nutzenden Dateinamenpräfix. z.B. abc_"
+PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND="Präfix (Ende)"
+PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND_HELP="Hinterlegen Sie den am Ende zu nutzenden Dateinamenpräfix. z.B. _abc"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="GROSS-klein-Buchstaben"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="Soll eine Umwandlung in GROSS- bzw. klein-Buchstaben erfolgen?"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="GROSS"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="klein"
+
+PLG_CNTOOLS_IMAGERESIZER_SPECIAL="Spezial"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG="Verzeichnisse nutzen"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_HELP="Wählen Sie, für welche Verzeichnisse die hier getroffenen Einstellungen genutzt werden sollen"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_ALL="Alle"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_EXCLUDE="Alle, bis auf"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_INCLUDE="Keine, bis auf"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER="Verzeichnisse"
+PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER_HELP="Tragen Sie hier jene Verzeichnisse ein, bei welchen die hier getätigten Einstellung (nicht) genutzt werden sollen. Getrennt durch einen Beistrich(,). Bsp.: verzeichnis1,verzeichnich2/detail,verzeichnis3"
