Revert "complete rework"
This reverts commit d0325d0691789f4fc6f77ba2ecbe229566c7a1e7.

--- a/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
+++ b/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
@@ -4,10 +4,8 @@
 ; @copyright	Copyright (c) 2014 Clemens Neubauer. All Rights Reserved.
 ; @license		GNU General Public License
 
-PLG_CNTOLS_IMAGERESIZER_BASIC_LABEL="Basic settings"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK="Watermark"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE="Resize using"
-PLG_CNTOOLS_IMAGERESIZER_RESIZE_HELP="You must choose between three types of resizing. As default your image will be resized by a percentage of the original image."
+PLG_CNTOOLS_IMAGERESIZER_RESIZE_HELP="You must choose between two types of resizing. As default your image will be resized by a percentage of the original image. You have the option of choosing fixed dimensions."
 PLG_CNTOOLS_IMAGERESIZER_PERCENT_OPTION="Percent"
 PLG_CNTOOLS_IMAGERESIZER_FIXED="Fixed"
 PLG_CNTOOLS_IMAGERESIZER_PERCENT="Percent(%)"
@@ -16,70 +14,15 @@ PLG_CNTOOLS_IMAGERESIZER_WIDTH="Width(px)"
 PLG_CNTOOLS_IMAGERESIZER_WIDTH_HELP="New width for the image after resize."
 PLG_CNTOOLS_IMAGERESIZER_HEIGHT="Height(px)"
 PLG_CNTOOLS_IMAGERESIZER_HEIGHT_HELP="New height for the image after resize."
-PLG_CNTOOLS_IMAGERESIZER_MAXSIDE_OPTION="Side length"
-PLG_CNTOOLS_IMAGERESIZER_MAXSIDE="Max. side length(px)"
-PLG_CNTOOLS_IMAGERESIZER_MAXSIDE_HELP="Leave it exceeds the maximum length of the longer side image. The second side is calculated pro rata in the same aspect ratio as the original image"
-PLG_CNTOOLS_IMAGERESIZER_SCALEUP="Scale up"
-PLG_CNTOOLS_IMAGERESIZER_SCALEUP_HELP="Smaller images are enlarged"
-
-;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_HELP="Select whether or what should be used as a watermark"
-;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_OPTION="Image"
-;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_OPTION="Text"
-;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE="Image"
-;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_HELP="Please select the desired image for the watermark. File extension: PNG"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Watermark text(optional)"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text which is to be used as a watermark."
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_INFONOTE_HELP="To integrate a date-dependent value, please use the following format: {date}....{/date}. The retrieved text is converted with <a target='_blank' href='http://php.net/manual/en/function.date.php'>date()</a> function. Ex.: (c) {date}Y{/date} - Company name"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Watermark Text(optional)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text to display over picture"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE="Watermark font size(px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE_HELP="Define the size of the font used to display your text."
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_COLOR="Watermark font color"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_COLOR_HELP="Choose the color which you would like to use for your watermark."
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OPACITY="Watermark opacity(%)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OPACITY="Watermark opacity (%)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OPACITY_HELP="You must define in percent the opacity of your watermark. 0 means no opacity, 100 means maximum opacity."
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE="Font style"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_HELP="Select the font to-use"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_ARIAL="Arial"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_CLRN="CLRN"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTTYPE_VERA="Vera"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTURL="Font URL(optional)"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_FONTURL_HELP="Enter the url address for the spcific font you want to use. Ex.: http://www.example.tld/fonts/fontname.ttf"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR="Horizontal alignment"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_HELP="Select the position of the horizontal alignment"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_LEFT="Left"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_CENTER="Center"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSHOR_RIGHT="Right"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT="Vertical alignment"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_HELP="Select the position of the vertical alignment"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_TOP="Top"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_CENTER="Center"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_POSVERT_BOTTOM="Bottom"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR="Horizontal Offset(px)"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR_HELP="The watermark is shifted the number of pixels stored here at left or right towards the center"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER="Vertical offset(px)"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER_HELP="The watermark is shifted stored here number of pixels at the top or bottom toward the center"
-
-PLG_CNTOOLS_IMAGERESIZER_FILENAME="File name"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT="Crypt filename"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_HELP="Select which encryption system should be used"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_UNIQID="Randomize"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_MD5="MD5"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_SHA1="SHA1"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_ROT13="ROT13"
-PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT_ONLYPREFIX="Prefix only"
-PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF="Prefix(begin)"
-PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF_HELP="Leave the file name prefix to be used at the beginning. z.B. abc_"
-PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND="Prefix(end)"
-PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND_HELP="Leave the file name prefix to be used at the end. z.B. _abc"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="BIG-small-letters"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="If a conversion to uppercase or lowercase letters done?"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="BIG"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="small"
-
-PLG_CNTOOLS_IMAGERESIZER_SPECIAL="Special"
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG="used folders"
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_HELP="Select for which folders the settings made here will be used or not"
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_ALL="All"
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_EXCLUDE="All but ..."
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_INCLUDE="None, except for..."
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER="Folders"
-PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER_HELP="Enter here those directories in which the setting made here (not) should be used. Separated by a comma (,). Ex.: folder1,folder2/detail,folder3"
+PLG_CNTOOLS_IMAGERESIZER_ORIENTATION="Save orientation"
+PLG_CNTOOLS_IMAGERESIZER_ORIENTATION_HELP="Check the orientation of the original image to leave them in the same orientation"
+PLG_CNTOOLS_IMAGERESIZER_SCALEUP="scale up"
+PLG_CNTOOLS_IMAGERESIZER_SCALEUP_HELP="smaller images are enlarged"
