change EN text for UPPER lowe case

--- a/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
+++ b/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
@@ -70,10 +70,10 @@ PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF="Prefix(begin)"
 PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTANF_HELP="Leave the file name prefix to be used at the beginning. z.B. abc_"
 PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND="Prefix(end)"
 PLG_CNTOOLS_IMAGERESIZER_PREFIXTXTEND_HELP="Leave the file name prefix to be used at the end. z.B. _abc"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="BIG-small-letters"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="If a conversion to uppercase or lowercase letters done?"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="BIG"
-PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="small"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="UPPER-lower-case"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="Should be made a conversion to upper- or lowercase?"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="UPPER"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="lower"
 
 PLG_CNTOOLS_IMAGERESIZER_SPECIAL="Special"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG="used folders"
