--- a/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
+++ b/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
@@ -4,7 +4,7 @@
 ; @copyright	Copyright (c) 2014 Clemens Neubauer. All Rights Reserved.
 ; @license		GNU General Public License
 
-PLG_CNTOLS_IMAGERESIZER_BASIC_LABEL="Basis-Einstellungen"
+PLG_CNTOOLS_IMAGERESIZER_BASIC_LABEL="Basis-Einstellungen"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK="Wasserzeichen"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE="Grössenänderung"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE_HELP="Sie müssen zwischen zwei Arten von Größenänderung wählen. Standardmäßig wird Ihr Bild mit einem Prozentsatz des Originalbildes in der Größe verändert. Sie haben aber auch die Möglichkeit der Wahl für fixe Abmessungen."
@@ -27,7 +27,7 @@ PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_OPTION="Bild"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_OPTION="Text"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE="Bild"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_HELP="Wählen Sie bitte das gewünschte Bild für das Wasserzeichen. Dateiendung: PNG"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Wasserzeichentext(optional)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Text"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text welcher als Wasserzeichen genutzt werden soll."
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_INFONOTE_HELP="Um einen datumsabhängigen Wert integrieren zu können, nutzen Sie bitte folgendes Format: {date}....{/date}. Der ermittelte Text wird mit der <a target='_blank' href='http://php.net/manual/de/function.date.php'>date()</a> Funktion umgewandelt. Zusätzlich stehen noch die Möglichkeiten {meta}...{/meta} (<a href='https://docs.joomla.org/JApplication/getCfg#Config_Properties' target='_blank'>Details</a>) als auch {user}...{/user} (<a href='https://docs.joomla.org/Accessing_the_current_user_object#Object_Member_Variables_and_Parameters' target='_blank'>Details</a>) zur Verfügung.<br>Bsp.: (c) {date}Y{/date} - {meta}sitename{/meta} by {user}name{/user}"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE="Schriftgrösse des Wasserzeichens(px)"
@@ -83,3 +83,7 @@ PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_EXCLUDE="Alle, bis auf"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_INCLUDE="Keine, bis auf"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER="Verzeichnisse"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER_HELP="Tragen Sie hier jene Verzeichnisse ein, bei welchen die hier getätigten Einstellung (nicht) genutzt werden sollen. Getrennt durch einen Beistrich(,). Bsp.: verzeichnis1,verzeichnich2/detail,verzeichnis3"
+PLG_CNTOOLS_IMAGERESIZER_CHOOSEFILETYPE="Dateitypen selektieren"
+PLG_CNTOOLS_IMAGERESIZER_CHOOSEFILETYPE_HELP="Aktivieren Sie diese Option, wenn Sie gezielt auf einzelne Dateitypen selektieren möchten"
+PLG_CNTOOLS_IMAGERESIZER_FILETYPE="Dateitypen"
+PLG_CNTOOLS_IMAGERESIZER_FILETYPE_HELP="Bitte wählen Sie min. eine Option. Ist hier nichts ausgewählt, so werden keine Bilder bearbeitet"
