--- a/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
+++ b/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
@@ -4,7 +4,7 @@
 ; @copyright	Copyright (c) 2014 Clemens Neubauer. All Rights Reserved.
 ; @license		GNU General Public License
 
-PLG_CNTOLS_IMAGERESIZER_BASIC_LABEL="Basic settings"
+PLG_CNTOOLS_IMAGERESIZER_BASIC_LABEL="Basic settings"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK="Watermark"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE="Resize using"
 PLG_CNTOOLS_IMAGERESIZER_RESIZE_HELP="You must choose between three types of resizing. As default your image will be resized by a percentage of the original image."
@@ -27,7 +27,7 @@ PLG_CNTOOLS_IMAGERESIZER_SCALEUP_HELP="Smaller images are enlarged"
 ;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_OPTION="Text"
 ;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE="Image"
 ;PLG_CNTOOLS_IMAGERESIZER_WATERMARK_IMAGE_HELP="Please select the desired image for the watermark. File extension: PNG"
-PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Watermark text(optional)"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT="Text"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_HELP="Text which is to be used as a watermark."
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_INFONOTE_HELP="To integrate a date-dependent value, please use the following format: {date}....{/date}. The retrieved text is converted with <a target='_blank' href='http://php.net/manual/en/function.date.php'>date()</a> function. Ex.: (c) {date}Y{/date} - Company name"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_TEXT_SIZE="Watermark font size(px)"
@@ -83,3 +83,7 @@ PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_EXCLUDE="All but ..."
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG_INCLUDE="None, except for..."
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER="Folders"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFOLDER_HELP="Enter here those directories in which the setting made here (not) should be used. Separated by a comma (,). Ex.: folder1,folder2/detail,folder3"
+PLG_CNTOOLS_IMAGERESIZER_CHOOSEFILETYPE="File type selection"
+PLG_CNTOOLS_IMAGERESIZER_CHOOSEFILETYPE_HELP="Activate this option to choose whiche file types should be checked"
+PLG_CNTOOLS_IMAGERESIZER_FILETYPE="File types"
+PLG_CNTOOLS_IMAGERESIZER_FILETYPE_HELP="Choose min. one item. If is nothing selected, no images will be reworked"
