remove warning, add property check and add 2 new exclude options
* remove warning in function params of onContentBeforeSave
* check property filepath exists
* exclude watermark by text in file name
* exclude crypt file name by text in file name

--- a/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
+++ b/language/de-DE/de-DE.plg_content_plg_cntools_imageresizer.ini
@@ -57,6 +57,10 @@ PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR="Horizontaler Offset (px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR_HELP="Das Wasserzeichen wird die hier hinterlegte Pixelanzahl bei Links bzw. Rechts in Richtung Mitte verschoben"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER="Vertikaler Offset (px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER_HELP="Das Wasserzeichen wird die hier hinterlegte Pixelanzahl bei Oben bzw. Unten in Richtung Mitte verschoben"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWM="Text für kein WM"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWM_HELP="Wird der hier hinterlegte Text im Dateinamen des neuen Bildes gefunden, wird bei diesem Bild kein Wasserzeichen hinzugefügt. Ist das Feld leer, wird bei allen Bildern ein Wasserzeichen hinzugefügt!"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWMREMOVE="Text für kein WM löschen"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWMREMOVE_HELP="Soll der Text das kein Wasserzeichen gesetzt werden soll aus dem Dateinamen entfernt werden?"
 
 PLG_CNTOOLS_IMAGERESIZER_FILENAME="Dateiname"
 PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT="Dateinamen verschlüsseln"
@@ -74,6 +78,8 @@ PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="GROSS-klein-Buchstaben"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="Soll eine Umwandlung in GROSS- bzw. klein-Buchstaben erfolgen?"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="GROSS"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="klein"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_NOCRYPTTXT="Text für keine Verschlüsselung"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_NOCRYPTTXT_HELP="Wird der hier hinterlegte Text im Dateiname des neuen Bildes gefunden, wird der Dateiname des Bildes nicht verschlüsselt. Auf Präfix bzw. GROSS-klein-Buchstaben hat dies keine Auswirkung."
 
 PLG_CNTOOLS_IMAGERESIZER_SPECIAL="Spezial"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG="Verzeichnisse nutzen"
