--- a/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
+++ b/language/en-GB/en-GB.plg_content_plg_cntools_imageresizer.ini
@@ -57,6 +57,10 @@ PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR="Horizontal Offset(px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_HOR_HELP="The watermark is shifted the number of pixels stored here at left or right towards the center"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER="Vertical offset(px)"
 PLG_CNTOOLS_IMAGERESIZER_WATERMARK_OFFSET_VER_HELP="The watermark is shifted stored here number of pixels at the top or bottom toward the center"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWM="Text for no watermark"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWM_HELP="If the stored text found in the filename of the new image, in this image no watermark will be added. If this field is empty, all images will get an watermark!"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWMREMOVE="Delete text for no watermark"
+PLG_CNTOOLS_IMAGERESIZER_WATERMARK_NOWMREMOVE_HELP="Should be deleted the text for "no watermark" in the filename"
 
 PLG_CNTOOLS_IMAGERESIZER_FILENAME="File name"
 PLG_CNTOOLS_IMAGERESIZER_NEWFILECRYPT="Crypt filename"
@@ -74,6 +78,8 @@ PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW="UPPER-lower-case"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_HELP="Should be made a conversion to upper- or lowercase?"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_UPPER="UPPER"
 PLG_CNTOOLS_IMAGERESIZER_FILENAME_UPLOW_LOWER="lower"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_NOCRYPTTXT="Text for not encrypt filenames"
+PLG_CNTOOLS_IMAGERESIZER_FILENAME_NOCRYPTTXT_HELP="If the stored text found in the filename of the new image, the filename will not be encrypted. If this field is empty, all filenames of the images will be crypted!"
 
 PLG_CNTOOLS_IMAGERESIZER_SPECIAL="Special"
 PLG_CNTOOLS_IMAGERESIZER_EXCLUDEFLAG="used folders"
